<resources>
    <string name="app_name">Lost</string>

    <!-- Login Fragment-->
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_bt">Sign In</string>
    <string name="login_create_account_bt"> Create Account</string>
    <string name="forgot_password_text">Forgot your password?</string>

    <!-- Create account  -->

    <string name="create_account_button">Register</string>
    <string name="create_account_name_hint"> Name</string>
    <string name="password_confirmation_hint">Confirm password</string>
    <string name="email_hint">Email</string>
    <string name="switch_to_login_text">Already have an account?</string>

    <!-- Report -->
    <string name="report_prompt_header">Report a missing pet you\'ve found or lost</string>
    <string name="report_lost_label">Lost</string>
    <string name="report_found_label">Found</string>
    <string name="report_next_button">Next</string>

    <string name="report_form_name">Name</string>
    <string name="report_form_weight">Weight</string>
    <string name="report_form_zip">Zip Code</string>
    <string name="report_form_description">Description</string>



</resources>
