<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
          android:background="@color/colorPrimary"
          android:layout_width="match_parent"
          android:layout_height="@dimen/divider_height"
          tools:layout_editor_absoluteX="0dp"
          app:layout_constraintTop_toTopOf="parent"
          android:id="@+id/view"/>

    <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_card"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_margin="@dimen/vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!-- TODO change color of input fields -->

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    android:layout_marginTop="@dimen/vertical_margin_large"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/login_username_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    android:layout_marginTop="@dimen/vertical_margin_large"
                    app:layout_constraintTop_toBottomOf="@id/layout_username">

                <com.google.android.material.textfield.TextInputEditText
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/login_password_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/sign_in_bt"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/login_sign_in_bt"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    tools:layout_editor_absoluteX="0dp"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    app:layout_constraintBottom_toTopOf="@+id/create_account_bt"/>

            <Button
                    android:id="@+id/create_account_bt"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/login_create_account_bt"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    tools:layout_editor_absoluteX="0dp"
                    android:layout_marginBottom="@dimen/vertical_margin_large"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>