<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
            android:background="@drawable/gradient_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/view"/>

    <androidx.cardview.widget.CardView
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_account_card"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toTopOf="@+id/view"
            android:layout_marginTop="88dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:singleLine="true"
                        android:id="@+id/name_et"
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/create_account_name_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout"
                    android:layout_margin="@dimen/vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:singleLine="true"
                        android:id="@+id/email_et"
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/email_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    app:layout_constraintTop_toBottomOf="@+id/email_layout"
                    android:layout_margin="@dimen/vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:singleLine="true"
                        android:id="@+id/password_et"
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/login_password_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@+id/password_layout"
                    android:layout_margin="@dimen/vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_layout"
                    tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:singleLine="true"
                        android:id="@+id/confirm_pass_et"
                        android:textSize="@dimen/hint_text_size"
                        android:hint="@string/password_confirmation_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            -->

            <Button
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_marginRight="@dimen/horizontal_margin"
                    android:text="@string/create_account_button"
                    android:textSize="@dimen/button_text_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_button_height"
                    tools:layout_editor_absoluteX="16dp"
                    android:id="@+id/button"
                    android:layout_marginBottom="@dimen/vertical_margin_large"
                    app:layout_constraintBottom_toTopOf="@+id/textView"/>

            <TextView
                    android:textColor="@color/colorLight"
                    android:text="@string/switch_to_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/button"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.622"
                    android:layout_marginBottom="88dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/textView"/>

            <Button
                    android:textColor="@color/colorLight"
                    android:background="@drawable/button_border"
                    android:text="Sign In"
                    android:layout_width="70dp"
                    android:layout_height="@dimen/card_button_height"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>